fix horizontal scroll

--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,12 @@ body {
     line-height: 1.8;
     color: #f5f6f7;
 }
+
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+
 p {font-size: 16px;}
 .margin {margin-bottom: 45px;}
 .bg-1 {
